Fix the alignment with the reference image

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html {
   box-sizing: border-box;
   font-family: Merriweather, serif;
   line-height: 1.5;
-  margin: 0;
+  margin: 0 1.5rem;
   padding: 0;
 }
 
@@ -22,7 +22,7 @@ header {
 }
 
 header h1 {
-  margin: 0 1.5rem;
+  margin: 0 1rem;
   font-size: 1.8rem;
   font-weight: normal;
   font-style: italic;
